# open-friendly-net-detection-server

./: .gitignore  LICENSE  README.md  config.yaml  docker-compose.yml  linux.Dockerfile  pyproject.toml
.github/workflows/: build.yml  update-dockerhub.yml
open_friendly_net_detection_server/: server.py
scripts/: gen_cert.py
